# Chai

./: .gitignore  CMakeLists.txt  Chai.py  README.md  pyproject.toml  testing.py
chai/: ActionsView.py  Chai.tcss  DataView.py  DeviceView.py  ExceptionDialog.py  MainApp.py  OptionsView.py  Plotting.py  RegisterView.py  Tui.py  Utils.py  Widgets.py
tests/: AnotherFile.dmap  KlmDummy.map  KlmServer copy.dmap  KlmServer.dmap  test_card.map
